--- a/Programmers/Programmers.vcxproj.filters
+++ b/Programmers/Programmers.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="순위 검색.cpp">
       <Filter>소스 파일\Level 2</Filter>
     </ClCompile>
+    <ClCompile Include="메뉴 리뉴얼.cpp">
+      <Filter>소스 파일\Level 2</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
