--- a/Programmers/Programmers.vcxproj.filters
+++ b/Programmers/Programmers.vcxproj.filters
@@ -39,5 +39,8 @@
     <ClCompile Include="오픈채팅방.cpp">
       <Filter>소스 파일\Level 2</Filter>
     </ClCompile>
+    <ClCompile Include="문자열 압축.cpp">
+      <Filter>소스 파일\Level 2</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
