--- a/Programmers/Programmers.vcxproj.filters
+++ b/Programmers/Programmers.vcxproj.filters
@@ -93,5 +93,8 @@
     <ClCompile Include="자물쇠와 열쇠.cpp">
       <Filter>소스 파일\Level 3</Filter>
     </ClCompile>
+    <ClCompile Include="폰켓몬.cpp">
+      <Filter>소스 파일\Level 1</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
